@@ -1,4 +1,8 @@
-﻿w17 12.10.2015 14:00:11 +0300 - build 4432
+﻿drkns 12.10.2015 18:26:07 +0200 - build 4433
+
+1. Ещё одно уточнение 4431.
+
+w17 12.10.2015 14:00:11 +0300 - build 4432
 
 1. уточнение 4431.
 
